--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #282c34;
+}
+
+html {
+  background-color: #282c34;
 }
 
 code {
@@ -36,4 +41,46 @@ code {
 
 .button:active {
   filter: brightness(1.2);
+}
+
+.color-input {
+  cursor: pointer;
+  width: 80%;
+  height: 2.25rem;
+  margin-top: 0.4rem;
+}
+
+.check-input {
+  outline: none;
+  border: none;
+  width: 1.2rem;
+  margin-left: 1rem;
+  cursor: pointer;
+}
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.property {
+  margin-left: 0.2rem;
+  background: linear-gradient(0deg, #20232a, #3b404c);
+  padding: 0.8rem;
+  transition: 200ms;
+  filter: drop-shadow(0 0 10px black);
+  border-radius: 0.2rem;
+  margin: 0.4rem;
+}
+
+.property span {
+  font-size: 1.2rem;
+}
+
+.property:hover {
+  filter: drop-shadow(0 0 2px black);
 }
