--- a/src/index.css
+++ b/src/index.css
@@ -101,9 +101,10 @@ code {
 
 .ball {
   position: absolute;
-  width: 5rem;
-  height: 5rem;
+  width: min(5rem, 5vw);
+  height: min(5rem, 5vw);
   margin: 2rem;
+  margin-left: min(5rem, 5vw);
   border-radius: 50%;
   filter: brightness(0.8);
   box-shadow: 0 0 5px 2px #9cd4c4;
@@ -111,6 +112,6 @@ code {
 
 @media (min-width:641px) {
   .ball {
-    background-color: #ccc;
+    background-color: #cccccc;
   }
 }
